--- a/largetable.css
+++ b/largetable.css
@@ -67,9 +67,11 @@
 	opacity: .9;
 }
 
-.largetable-shadow-left .largetable-maximize-btn, 
-.largetable-shadow-right .largetable-maximize-btn {
-	display: block;
+@media only screen and (min-width : 481px) {
+	.largetable-shadow-left .largetable-maximize-btn, 
+	.largetable-shadow-right .largetable-maximize-btn {
+		display: block;
+	}
 }
 
 .largetable-maximized .largetable-maximize-btn {
