--- a/largetable.css
+++ b/largetable.css
@@ -41,30 +41,22 @@ body.largetable-noscroll {
 	position: absolute;
 	right: 30px;
 	bottom: 35px;
-	background: #424242;
+	background-color: #000;
 	color: #fff;
-	font-family: serif;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24' stroke='white' stroke-width='2' fill='none' stroke-linecap='round' stroke-linejoin='round' class='css-i6dzq1'%3E%3Cpolyline points='15 3 21 3 21 9'%3E%3C/polyline%3E%3Cpolyline points='9 21 3 21 3 15'%3E%3C/polyline%3E%3Cline x1='21' y1='3' x2='14' y2='10'%3E%3C/line%3E%3Cline x1='3' y1='21' x2='10' y2='14'%3E%3C/line%3E%3C/svg%3E");
+	background-position: center center;
+	background-repeat: no-repeat;	
 	opacity: .8;
 	border: 0;
 	width: 30px;
 	height: 30px;
-	font-size: 12px;
+	font-size: 11px;
 	border-radius: 6px;
 	cursor: pointer;
 }
 
-.largetable-maximize-btn:before {
-	content: "\25E3";
-	position: absolute;
-	bottom: 4px;
-	left: 7px;
-}
-
-.largetable-maximize-btn:after {
-	content: "\25E5";
-	position: absolute;
-	top: 4px;
-	right: 7px;
+.largetable-maximized .largetable-maximize-btn {
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24' stroke='white' stroke-width='2' fill='none' stroke-linecap='round' stroke-linejoin='round' class='css-i6dzq1'%3E%3Cpolyline points='4 14 10 14 10 20'%3E%3C/polyline%3E%3Cpolyline points='20 10 14 10 14 4'%3E%3C/polyline%3E%3Cline x1='14' y1='10' x2='21' y2='3'%3E%3C/line%3E%3Cline x1='3' y1='21' x2='10' y2='14'%3E%3C/line%3E%3C/svg%3E");
 }
 
 .largetable-maximize-btn:hover {
